saves/test/demo_full_20240802_193545/dualedge/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp dualedge_tb.v dualedge.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
dualedge_tb.v:102: $finish called at 1000000 (1ps)

iverilog cmd 2 error:

